crates/texform-specs/tests/ui/argspec-invalid.stderr
error: invalid argspec literal at char 4: `?` is currently only supported for delimiter annotations
 --> tests/ui/argspec-invalid.rs:4:22
  |
4 |     let _ = argspec!("m:L?");
  |                      ^^^^^^
