crates/texform-specs/tests/ui/argspec-invalid.rs
use texform_specs::argspec;

fn main() {
    let _ = argspec!("m:L?");
}
